// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`science-sim + studio render goldens > renders + pins a digest for a11yAuditor [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 35,
  "paths": 0,
  "selects": 0,
  "sha": "7c9fbd625a31af58",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for anatomy [ssr] 1`] = `
{
  "buttons": 66,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 164,
  "paths": 0,
  "selects": 0,
  "sha": "ec23ac2c5e6a49cf",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for archStudio [ssr] 1`] = `
{
  "buttons": 83,
  "canvases": 0,
  "inputs": 2,
  "lengthBucket": 128,
  "paths": 0,
  "selects": 0,
  "sha": "a7a197acea5e11b4",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for artStudio [ssr] 1`] = `
{
  "buttons": 24,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 40,
  "paths": 0,
  "selects": 0,
  "sha": "92c6d1c7ae3b1d4d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for astronomy [mount] 1`] = `
{
  "buttons": 17,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 54,
  "paths": 0,
  "selects": 0,
  "sha": "07f3945b549bb56a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bakingScience [ssr] 1`] = `
{
  "buttons": 16,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 55,
  "paths": 0,
  "selects": 0,
  "sha": "00fe29c54672b741",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for bridgeLab [mount] 1`] = `
{
  "buttons": 24,
  "canvases": 0,
  "inputs": 7,
  "lengthBucket": 217,
  "paths": 6,
  "selects": 0,
  "sha": "428a6b3c131f9115",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cell [ssr] 1`] = `
{
  "buttons": 39,
  "canvases": 1,
  "inputs": 3,
  "lengthBucket": 108,
  "paths": 0,
  "selects": 0,
  "sha": "80538fc0261a8d3d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for chemBalance [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 1,
  "inputs": 1,
  "lengthBucket": 43,
  "paths": 0,
  "selects": 0,
  "sha": "5ca5b37b4ec3747d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for cyberDefense [ssr] 1`] = `
{
  "buttons": 20,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 53,
  "paths": 0,
  "selects": 0,
  "sha": "e8499663e095e00f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echoTrainer [ssr] 1`] = `
{
  "buttons": 28,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 145,
  "paths": 6,
  "selects": 0,
  "sha": "39c5155b3c62dc94",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for echolocation [ssr] 1`] = `
{
  "buttons": 10,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 47,
  "paths": 0,
  "selects": 0,
  "sha": "c5fdcd7f70bddaeb",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for epidemicSim [ssr] 1`] = `
{
  "buttons": 21,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 445,
  "paths": 6,
  "selects": 0,
  "sha": "72855760fcfcdfa1",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for fireEcology [ssr] 1`] = `
{
  "buttons": 29,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 113,
  "paths": 0,
  "selects": 0,
  "sha": "a5ff7965fd681d56",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for flightSim [ssr] 1`] = `
{
  "buttons": 48,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 207,
  "paths": 2,
  "selects": 2,
  "sha": "965747979633a87e",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for galaxy [ssr] 1`] = `
{
  "buttons": 30,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 110,
  "paths": 4,
  "selects": 0,
  "sha": "ebd2ec75a3e6cdf1",
  "svgs": 3,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for gameStudio [ssr] 1`] = `
{
  "buttons": 34,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 233,
  "paths": 0,
  "selects": 2,
  "sha": "84b36f01119211ea",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for kitchenLab [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 192,
  "paths": 0,
  "selects": 0,
  "sha": "57f9cc3ec2131936",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for microbiology [mount] 1`] = `
{
  "buttons": 14,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 225,
  "paths": 0,
  "selects": 0,
  "sha": "7a158bb6dc88e9c2",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for molecule [ssr] 1`] = `
{
  "buttons": 103,
  "canvases": 0,
  "inputs": 1,
  "lengthBucket": 172,
  "paths": 0,
  "selects": 0,
  "sha": "21cf02ba3e811168",
  "svgs": 1,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for moonMission [ssr] 1`] = `
{
  "buttons": 8,
  "canvases": 0,
  "inputs": 4,
  "lengthBucket": 66,
  "paths": 0,
  "selects": 0,
  "sha": "37cfb04c3ba5b072",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for physics [mount] 1`] = `
{
  "buttons": 36,
  "canvases": 1,
  "inputs": 9,
  "lengthBucket": 86,
  "paths": 0,
  "selects": 0,
  "sha": "9e20f6fa5e421664",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for punnett [ssr] 1`] = `
{
  "buttons": 30,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 135,
  "paths": 3,
  "selects": 4,
  "sha": "57c7330d17cae573",
  "svgs": 2,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rockCycle [ssr] 1`] = `
{
  "buttons": 13,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 28,
  "paths": 0,
  "selects": 1,
  "sha": "10a3f87b3898bf2d",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for rocks [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 1,
  "inputs": 0,
  "lengthBucket": 30,
  "paths": 0,
  "selects": 0,
  "sha": "9c8abc0c8505483f",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for semiconductor [mount] 1`] = `
{
  "buttons": 67,
  "canvases": 1,
  "inputs": 2,
  "lengthBucket": 93,
  "paths": 0,
  "selects": 0,
  "sha": "b68b1ceb3061dc3a",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for spaceExplorer [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 58,
  "paths": 0,
  "selects": 0,
  "sha": "f30d37df58533a9b",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for swimLab [ssr] 1`] = `
{
  "buttons": 12,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 68,
  "paths": 0,
  "selects": 0,
  "sha": "eaca76b79184fece",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for throwlab [ssr] 1`] = `
{
  "buttons": 53,
  "canvases": 1,
  "inputs": 7,
  "lengthBucket": 237,
  "paths": 0,
  "selects": 0,
  "sha": "cf877f9a0e9efb82",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for titrationLab [ssr] 1`] = `
{
  "buttons": 9,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 59,
  "paths": 0,
  "selects": 0,
  "sha": "0406e1a84a738883",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for waterCycle [ssr] 1`] = `
{
  "buttons": 18,
  "canvases": 1,
  "inputs": 4,
  "lengthBucket": 89,
  "paths": 0,
  "selects": 0,
  "sha": "ddb473ad380f64f7",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for wave [mount] 1`] = `
{
  "buttons": 68,
  "canvases": 1,
  "inputs": 8,
  "lengthBucket": 144,
  "paths": 0,
  "selects": 0,
  "sha": "c4be54d039a678a5",
  "svgs": 0,
}
`;

exports[`science-sim + studio render goldens > renders + pins a digest for weldLab [ssr] 1`] = `
{
  "buttons": 26,
  "canvases": 0,
  "inputs": 0,
  "lengthBucket": 170,
  "paths": 0,
  "selects": 0,
  "sha": "97da90b21693dc1f",
  "svgs": 0,
}
`;
